@@ -54,9 +54,13 @@
     <td>
 <?php if(count($historic)>0) { ?>
 <code class="div_code">
+    <table class="table_width">
     <?php foreach($historic as $hist) { ?>
-      <?php echo "<b>".$hist['timestamp']."</b>&nbsp;&nbsp;&nbsp;<label class='".$hist['type']."'>".$hist['action']."</label>"; ?><br />
+      <tr> 
+      <?php echo "<td class='historic_marge'><b>".$hist['timestamp']."</b></td><td><label class='".$hist['type']."'>".$hist['action']."</label>"; ?></td>
+     </tr>
     <?php } ?>
+    </table>
 </code>
 <?php } else { ?>
 <code class="div_code">
